<resources>
    <string name="app_name">PostfixCalculator</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="symbol_plus">+</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="symbol_minus">-</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="symbol_multiply">*</string>
    <string name="opening_bracket">(</string>
    <string name="number_zero">0</string>
    <string name="closing_bracket">)</string>
    <string name="symbol_divider">/</string>
    <string name="symbol_comma">.</string>
    <string name="symbol_CLEAR">CLEAR</string>
    <string name="symbol_isEqual">=</string>

</resources>