<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/calculatorDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="20dp"
                android:layout_marginBottom="0dp"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TableLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="bottom"
                android:stretchColumns="@android:string/VideoView_error_title">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="fill_horizontal"
                        android:layout_weight="1"
                        android:text="@string/number_one"
                        android:onClick="clickedOnNumberOrSymbol" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_two"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_three"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_plus"
                        android:onClick="clickedOnNumberOrSymbol"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_four"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_five"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_six"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_minus"
                        android:onClick="clickedOnNumberOrSymbol"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_seven"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_eight"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_nine"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_multiply"
                        android:onClick="clickedOnNumberOrSymbol"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn13"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/opening_bracket"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn14"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/number_zero"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn15"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/closing_bracket"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_divider"
                        android:onClick="clickedOnNumberOrSymbol"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/btn17"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_comma"
                        android:onClick="clickedOnNumberOrSymbol"/>

                    <Button
                        android:id="@+id/btn18"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_CLEAR"
                        android:onClick="resetDisplay"/>

                    <Button
                        android:id="@+id/btn19"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/symbol_isEqual"
                        android:onClick="calcErg"/>
                </TableRow>
            </TableLayout>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>